mycms/media/readingStyle.css
#allOutsideLinks{
    float: right;
    margin-top: 15px;
    color: grey;
    font-family: helvetica;
}
 
.outsideLinks a:link{
    border-right: 2px grey solid;
    padding-right: 10px;
    padding-left: 10px;
    text-decoration:none;
    color: #009DAE;
    
}

.outsideLinks a:visited{
    color: #009DAE;
}


.outsideLinks a:hover
{
    color:#99CC00;
}

#whiteBorder{
    background-color: #EDEEE1;
    width: 1292px;
    position: relative;
    left: 0px;
    top: 25px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 30px;
    padding-right: 30px;
	
}



#amplifyHeading {
    background-color: white;
    color: #009DAE;
    font-family: 'Bitter',serif;
    font-size: 72pt;
    margin-left: -30px;
    padding-left: 25px;
    padding-right: 35px;        /*padding left and right sum to 60px*/
    position: relative;
    text-align: left;
    width: 100%;
    z-index: 999;
    padding-top: 25px;


}

#innovationsHeading {
    font-family: "Times New Roman", serif;
    color: red;
    font-size: 1.18em;
    padding-left: 63px;               /*15px*/
}

#tHeading {
    font-style: italic;
}

#innovationsWholeDiv{  
/*     padding-left: 25px; */
padding-top: 3px;               /*to account for innovations logo imperfection*/
padding-left:22px;
     display: inline;
/*     z-index: -1; */
/* /\*   border-bottom: 5px solid #00CCCC;*\/ */
  }


#currentArticle{
    background-color: #00CCCC;
    font-weight: bold;
}

#abstractTitle{
/*	font-family: 'Patua One', cursive;*/
/*	font-family: 'Headland One', serif;*/
	font-family: 'Bitter', serif;
/*	font-size: 48pt;*/
    font-size: 32pt;
	text-align: center;
	color: #009DAE;
	width: 350px;
/*        padding-left: 15px;*/
        padding-right: 15px;
        padding-top: 20px;
        text-align: left;
        position: relative;
        margin-bottom: 18px;

}

#mapImg{
    position: relative;
    padding-left: 75px;
    background-color: #F5F9E7;
    width: 275px;               /*350-75*/
    padding-bottom: 58px;
    padding-top: 20px;
    
}

#abstractRest{
    width: 320px; /*350*/
    position: relative;
	font-size: 10pt;
	font-family: helvetica;
	position: relative;
	padding-left: 15px;
	padding-right: 15px;
        padding-bottom: 10px;
        padding-top: 10px;
        line-height: 1.2em;
	background-color: #F5F9E7;

}



.collapse{
    display: block;
    font-family: helvetica;
    color: #009DAE;
    text-align: right;
    background-color: #F5F9E7;
    width: 340px;
    padding-right: 10px;
    padding-top: 5px;
}

.expand{
    display: none;
    font-family: helvetica;
    color: #009DAE;
    text-align: right;
    background-color: #F5F9E7;
    width: 340px;
    padding-right: 10px;
    padding-top: 5px;
}

.clear{
    /* display: none */
    overflow:hidden;
    display: none;
}


#wholeLeftCol{
/*background-color: #D5D6C2;*/
/*position: fixed;*/
/*overflow: scroll;*/
}

/* height set in readingSetup based on abstractTitle */
#outline{
    width: 350px;
    position: absolute;
    padding-bottom: 10px;
    border-left: 1px solid grey;
	background-color: #F5F9E7;


    
	
}


.outlineBox{
    font-size: 10pt;
    font-family: helvetica;
    padding-top: 10px;
    padding-left: 15px;
    padding-right: 10px;
    line-height: 1.2em;

}

.outlineTitle{
	padding-bottom: 5px;
	font-weight: bold;
	border-bottom: 1px solid grey;
        margin-bottom: 5px;
        font-family: 'Bitter';
        color: #3d3d3d;
}

.outlineRest{
	padding-bottom: 20px;
        margin-bottom: 5px;
}


#article{
    font-family: helvetica;
    font-size: 10pt;
    line-height: 1.2em;
    background-color: white;
	width: 500px;
	position: relative;
/* 	padding-bottom: 20px;  */
  /*      padding-top: 20px;*/
/*	padding-left: 35px;*/
	padding-right: 50px;
        position: relative;
	display: inline;
	float:left;
}

#articleTitle{
    float: right;
	background-color: #EDEEE1;
        width: 750px;
	text-align: left;
	font-size: 30pt;
	font-family: helvetica;
        position: relative;
        padding-top: 20px;
        padding-bottom: 10px;
        width: 65.1%;
}


#articleSubtitle{
    position: relative;
  //  float: left;
    font-weight: normal;
    display: inline;
    text-align: left;
    font-size: 22pt;
        
}

.author-heading{
	font-size: 14pt;
}

.author-ref{
    font-weight: bold;
}

#reference{
    /*background-color: white;*/
/*    padding-bottom:60px;*/
    position:relative;
/*    padding-left: 50px;*/
/*    padding-right: 10px;*/
    display:inline;

/*    left: 35px;*/
}



#wholeRightCol{
    background-color: white;
    float: right;
    overflow-y: scroll;
    /*overflow-x: hidden;*/
    width: 840px;
    padding-left: 30px;
}

.artPar{
}


.footNumber{
    color: #009DAE;
/*    color: #EE4624; /* tangerine */
/*    color: #99CC00;             /*lime green*/
}

.refNum{
   display: inline;
   font-size:8pt;
   line-height: 1.2em;
   color: #009DAE;
}

h2{
    line-height:1.1em;
}


.references{
    font-size:8pt;
    line-height: 1.2em;
}

.references a {
    text-decoration: none;
    color: #EE4624; /*tangerine */
}

.references a:hover {
    color: #00CCCC;
    text-decoration: underline;
}



/* style specific to homepage */
#map{
    background-color: #EDEEE1;
    padding-bottom: 50px;
    padding-left: 50px;
    padding-top: 50px;
    width: 100%;
    margin-top: 30px;
}

#amplifyHome {
    background-color: white;
    color: #009DAE;
    font-family: 'Bitter',serif;
    font-size: 72pt;
    margin-left: -30px;
    padding-left: 25px;
    padding-right: 35px;        /*padding left and right sum to 60px*/
    position: relative;
    text-align: left;
    width: 100%;
    z-index: 999;
    padding-top: 50px;
    text-align: center;


}

#innovationsHome{
    font-family: "Times New Roman", serif;
    color: red;
    font-size: 1.18em;
    padding-left: 63px;               /*15px*/
}

#homeArtTitle{

}

#homeArtSubTitle{
    display: inline;
}

#homeAbstract{
    display: inline;
}

